@@ -1,0 +1,10 @@
+inherit kadu
+
+MOD_DEPEND=">=net-im/kadu-docking-${MIN_REQ}"
+
+inherit kadu-module
+
+SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
+DESCRIPTION="Kadu module that supports docking icon on desktop"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="amd64 x86"
